styles/brand.css
/* Body Div */
body > div {
  display: flex;
  flex-direction: column;
  max-width: 75%;
  align-self: center;
  justify-self: center;
}

/* Div inside main */
main div {
  display: flex;
  flex-direction: column;
}

/* P styles */
p {
  background: var(--primary-color3);
  color: var(--primary-color4);
  padding: 0%;
  margin: 0% auto;
}

/* Div that contains uls */
body > main:nth-child(3) > div:nth-child(1) > div:nth-child(2) {
  display: flex;
  flex-direction: column;
}

/* Color Ul styles */
div > ul:first-of-type {
  /*lex-wrap: wrap;*/
  list-style-type: none;
  /*justify-content: center;*/
}

/* Color Table */
table {
  width: 75%;
  align-self: center;
  border-collapse: collapse;
  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
}

th, td {
  border: 1px solid var(--primary-color4);
  text-align: left;
  min-width: 50%;
  padding: 2%;
}

th {
  background-color: var(--primary-color1);
  color: var(--primary-color4);
}

/* Font Ul */
div > ul:first-of-type > li {
  margin: 0%;
}

/* Every h2 except for the header */
h2[data-location="main"] {
  margin-top: 5%;
  margin-bottom: 0%;
}

hr {
  color: var(--primary-color4);
  min-width: 100%;
  margin-bottom: 3%;
}

/* First li items */
td[data-color="prim1"] {
  background-color: var(--primary-color1);
}

td[data-color="prim2"] {
  background-color: var(--primary-color2);
  color: var(--primary-color3);
}

td[data-color="prim3"] {
  background-color: var(--primary-color3);
}

td[data-color="prim4"] {
  background-color: var(--primary-color4);
  color: var(--primary-color3);
}

td[data-color="sec1"] {
  background-color: var(--secondary-color1);
  color: var(--secondary-color2);
}

td[data-color="sec2"] {
  background-color: var(--secondary-color2);
  color: var(--secondary-color1)
}

/* Selects Fonts and Color Scheme uls */
body > div:nth-child(3) > main:nth-child(1) > div:nth-child(1) > div:nth-child(2) > ul {
  list-style-type: none;
  margin: 0%;
  padding: 0%;
  max-width: 75%;
  align-self: center;
}

/* fonts used */
ol {
  list-style-type: circle;
}

ol > li {
  margin-bottom: 2%;
}

/* Image styling */
img {
 max-width: 25%;
 margin: 3% auto 2% auto;
}

